런 게임 추가

--- a/games.html
+++ b/games.html
@@ -215,6 +215,11 @@
             box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
         }
 
+        .bg-mint {
+            background: linear-gradient(135deg, #2dd4bf, #0d9488);
+            box-shadow: 0 4px 12px rgba(45, 212, 191, 0.3);
+        }
+
         .home-btn {
             position: absolute;
             top: 24px;
@@ -254,6 +259,18 @@
         </div>
 
         <div class="grid">
+
+            <!-- RanRun -->
+            <a href="run.html" class="game-card">
+                <div class="icon-box bg-mint">
+                    <span class="material-symbols-rounded">directions_run</span>
+                </div>
+                <div class="game-info">
+                    <span class="game-title">란런 (RanRun)</span>
+                    <span class="game-desc">장애물을 피해 달리는 쿠키런 스타일 게임 🍪</span>
+                </div>
+                <span class="material-symbols-rounded" style="color: var(--text-sub);">arrow_forward_ios</span>
+            </a>
 
             <!-- Omok -->
             <a href="omok.html" class="game-card">
