--- a/run.html
+++ b/run.html
@@ -324,7 +324,142 @@
             if (hp <= 0) gameOver();
         }
 
-        // ... [jump function stays same] ...
+        function jump() {
+            if (player.isGrounded) {
+                player.vy = JUMP_POWER;
+                player.state = 'jump';
+                player.isGrounded = false;
+                player.jumpCount = 1;
+                createDust(player.x, player.y + 80);
+            } else if (player.jumpCount < 2) {
+                player.vy = DOUBLE_JUMP_POWER;
+                player.jumpCount = 2;
+                createSparkle(player.x, player.y + 40, '#fff');
+            }
+        }
+
+        function spawnObstacle() {
+            const type = Math.random();
+            const x = canvas.width + 100;
+            const ground = player.groundY;
+
+            if (type < 0.5) {
+                // Ground Obstacle
+                obstacles.push({
+                    x: x, y: ground + 10,
+                    w: 50, h: 70,
+                    type: Math.random() < 0.5 ? 'spike' : 'block'
+                });
+                spawnItems(x, ground - 130);
+            } else {
+                // Hanging Block
+                obstacles.push({
+                    x: x, y: ground - 70,
+                    w: 60, h: 60,
+                    type: 'hanging'
+                });
+                spawnItems(x, ground + 20);
+            }
+        }
+
+        function spawnItems(x, y) {
+            for (let i = 0; i < 3; i++) {
+                if (Math.random() > 0.5) continue;
+                items.push({
+                    x: x + i * 50, y: y, w: 30, h: 30,
+                    type: Math.random() < 0.1 ? 'potion' : (Math.random() < 0.3 ? 'jelly' : 'coin')
+                });
+            }
+        }
+
+        function checkCollisions() {
+            const p = {
+                x: player.x + 15, y: player.y + 10,
+                w: player.w - 30, h: player.state === 'slide' ? 30 : player.h - 10
+            };
+
+            obstacles.forEach(o => {
+                if (o.hit) return;
+                let oRect = { x: o.x, y: o.y, w: o.w, h: o.h };
+                if (intersect(p, oRect)) {
+                    o.hit = true;
+                    takeDamage();
+                }
+            });
+
+            items.forEach(i => {
+                const iRect = { x: i.x - 10, y: i.y - 10, w: i.w + 20, h: i.h + 20 };
+                if (intersect(p, iRect)) {
+                    i.collected = true;
+                    if (i.type === 'coin') score += 100;
+                    if (i.type === 'jelly') score += 200;
+                    if (i.type === 'potion') { hp = Math.min(100, hp + 20); createSparkle(player.x, player.y, '#f0f'); }
+                    createSparkle(i.x, i.y, '#ff0');
+                }
+            });
+        }
+
+        function intersect(r1, r2) {
+            return !(r2.x > r1.x + r1.w || r2.x + r2.w < r1.x || r2.y > r1.y + r1.h || r2.y + r2.h < r1.y);
+        }
+
+        function takeDamage() {
+            if (player.state === 'hurt') return;
+            hp -= 20;
+            player.state = 'hurt';
+            player.vy = -8;
+            canvas.style.transform = `translate(${Math.random() * 10 - 5}px, ${Math.random() * 10 - 5}px)`;
+            setTimeout(() => { canvas.style.transform = 'none'; if (hp > 0) player.state = 'run'; }, 500);
+        }
+
+        function gameOver() {
+            isRunning = false;
+            document.getElementById('final-score').innerText = Math.floor(score);
+            document.getElementById('game-over').style.display = 'flex';
+        }
+
+        // --- DRAWING ---
+        function draw() {
+            ctx.fillStyle = '#AEE4FF';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+            drawBackground();
+
+            ctx.fillStyle = '#8B4513';
+            ctx.fillRect(0, player.groundY + 80, canvas.width, canvas.height);
+            ctx.fillStyle = '#7CFC00';
+            ctx.beginPath();
+            ctx.moveTo(0, player.groundY + 80);
+            for (let i = 0; i < canvas.width; i += 20) {
+                ctx.lineTo(i + 10, player.groundY + 70 + Math.sin(i + bgOffset) * 5);
+                ctx.lineTo(i + 20, player.groundY + 80);
+            }
+            ctx.lineTo(canvas.width, canvas.height);
+            ctx.lineTo(0, canvas.height);
+            ctx.fill();
+
+            obstacles.forEach(drawObstacle);
+            items.forEach(drawItem);
+            drawPlayer();
+
+            particles.forEach(p => {
+                ctx.fillStyle = p.color;
+                ctx.fillRect(p.x, p.y, 4, 4);
+            });
+        }
+
+        function drawBackground() {
+            ctx.fillStyle = '#90EE90';
+            ctx.beginPath();
+            ctx.moveTo(0, canvas.height);
+            for (let i = 0; i <= canvas.width; i += 100) {
+                let y = player.groundY - 50 + Math.sin((i + bgOffset * 0.2) * 0.01) * 50;
+                ctx.lineTo(i, y);
+            }
+            ctx.lineTo(canvas.width, canvas.height);
+            ctx.lineTo(0, canvas.height);
+            ctx.fill();
+        }
 
         function drawPlayer() {
             ctx.save();
